--- a/index.css
+++ b/index.css
@@ -25,6 +25,7 @@ input {
   background-color: rgba(30, 30, 30, 0.9);
   border: none;
   border-bottom: 1px solid rgba(235, 235, 235, 0.9);
+  border-radius: 0;
   outline: none;
 }
 
@@ -110,7 +111,7 @@ p {
   }
 
   input {
-    width: calc(20% - 8px);
+    width: calc(20  % - 8px);
   }
 
   .square {
